adding serenity report